<resources>
    <string name="app_name">InventarizacijasPaligs</string>
    <string name="e_pasts">E-Pasts</string>
    <string name="parole">Parole</string>
    <string name="pierakst_ties">Pierakstīties</string>
    <string name="noliktavas">Noliktavas</string>
    <string name="atsl_gties">Atslēgties</string>
    <string name="nav_atrastas_noliktavas">Nav atrastas noliktavas</string>
    <string name="atpakal">Atpakaļ</string>
    <string name="nav_atrastas_preces">Nav atrastas preces</string>
    <string name="pievienot">Pievienot</string>
    <string name="ievadiet_svitrukodu">Ievadiet svītrukodu</string>
    <string name="ievadiet_nosaukumu">Ievadiet nosaukumu</string>
    <string name="ievadiet_aprakstu">Ievadiet aprakstu</string>
    <string name="dz_st">Dzēst</string>
    <string name="redi_t">Rediģēt</string>
    <string name="p_rvietot">Pārvietot</string>
    <string name="ievadiet_skaitu">Ievadiet skaitu</string>
    <string name="ievadiet_cenu">Ievadiet cenu</string>
    <string name="sv_trukods_item_barcode">Svītrukods: </string>
    <string name="nosaukums_item_name">Nosaukums: @{item.name}</string>
</resources>