<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/item_barcode_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@null"
        android:hint="@string/ievadiet_svitrukodu"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_title_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <EditText
        android:id="@+id/item_title_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@null"
        android:hint="@string/ievadiet_nosaukumu"
        app:layout_constraintTop_toBottomOf="@+id/item_barcode_input"
        app:layout_constraintBottom_toTopOf="@+id/item_description_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
        android:id="@+id/item_description_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@null"
        android:hint="@string/ievadiet_aprakstu"
        app:layout_constraintTop_toBottomOf="@id/item_title_input"
        app:layout_constraintBottom_toTopOf="@id/item_count_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
        android:id="@+id/item_count_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@null"
        android:hint="@string/ievadiet_skaitu"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/item_description_input"
        app:layout_constraintBottom_toTopOf="@id/item_price_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/item_price_input"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@null"
        android:hint="@string/ievadiet_cenu"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/item_count_input"
        app:layout_constraintBottom_toTopOf="@id/add_new_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/add_new_item"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/pievienot"
        app:layout_constraintTop_toBottomOf="@id/item_price_input"
        app:layout_constraintBottom_toTopOf="@id/close_add_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <Button
        android:id="@+id/close_add_items"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/atpakal"
        app:layout_constraintTop_toBottomOf="@id/add_new_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>