<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="com.davisdabols.inventarizacijaspaligs.data.models.ItemsModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.barcode}"
            tools:text="123456789"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.name}"
            android:layout_marginTop="8dp"
            tools:text="This is a title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_barcode"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.description}"
            android:layout_marginTop="8dp"
            tools:text="Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name"
            app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.itemCount}"
            android:layout_marginTop="8dp"
            tools:text="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_description"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{item.itemPrice}"
            android:layout_marginTop="8dp"
            tools:text="12.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_count"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/move_item"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/p_rvietot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/edit_item"
            />

        <Button
            android:id="@+id/edit_item"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/redi_t"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/delete_item"
        />


        <Button
            android:id="@+id/delete_item"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/dz_st"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>